--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ description =
     run tests
     alldeps: with all optional dependencies
     devdeps: with the latest developer version of key dependencies
+    oldestdeps: with the oldest supported version of key dependencies
     pyargs: with --pyargs on installed package
     warnings: treating warnings as errors
     regtests: with --bigdata and --slow flags
@@ -57,11 +58,11 @@ extras =
 deps =
     xdist: pytest-xdist
     devdeps: -rrequirements-dev.txt
-    numpy120: numpy==1.20.*
-    numpy121: numpy==1.21.*
-    numpy122: numpy==1.22.*
     ddtrace: ddtrace
+    oldestdeps: minimum_dependencies
 commands_pre =
+    oldestdeps: minimum_dependencies romancal --filename requirements-min.txt
+    oldestdeps: pip install -r requirements-min.txt
     pip freeze
 commands =
     pytest \
