--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     'stsci.imagestats >= 1.6.3',
     'drizzle >= 1.13.7',
     'webbpsf == 1.1.1',
+    'drizzle >= 1.14.3',
 ]
 dynamic = ['version']
 
