Point stcal installation to main branch.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ dependencies = [
     "roman_datamodels>=0.21.0,<0.22.0",
     # "roman_datamodels @ git+https://github.com/spacetelescope/roman_datamodels.git",
     "scipy >=1.11",
-    "stcal>=1.8.0,<1.9.0",
-    # "stcal @ git+https://github.com/spacetelescope/stcal.git@main",
+#    "stcal>=1.8.0,<1.9.0",
+    "stcal @ git+https://github.com/spacetelescope/stcal.git@main",
     "stpipe >=0.7.0,<0.8.0",
     # "stpipe @ git+https://github.com/spacetelescope/stpipe.git@main",
     "tweakwcs >=0.8.8",
